@@ -1,0 +1,26 @@
+/*
+ * To change this template, choose Tools | Templates
+ * and open the template in the editor.
+ */
+
+package com.nativelibs4java.opencl;
+import com.nativelibs4java.opencl.library.OpenCLLibrary;
+import com.ochafik.util.listenable.Pair;
+import static com.nativelibs4java.opencl.library.OpenCLLibrary.*;
+import com.sun.jna.*;
+import com.sun.jna.ptr.*;
+import java.nio.*;
+import static com.nativelibs4java.opencl.OpenCL4Java.*;
+import static com.nativelibs4java.opencl.CLException.*;
+import static com.nativelibs4java.util.JNAUtils.*;
+import static com.nativelibs4java.util.NIOUtils.*;
+
+/**
+ *
+ * @author ochafik
+ */
+public class CLImage2D extends CLImage {
+	public CLImage2D(CLContext context, cl_mem entity) {
+        super(context, entity);
+	}
+}
